# garmin-ai-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  cleanup_branches.sh  main.py  manual_git_squash_commands.md  pixi.toml  pr_diff.patch  pyproject.toml  requirements.txt  squash_git_history.sh  tasks.md  test_architecture.py  vulture.toml
.github/workflows/: ci.yml
agent_docs/: codebaseSummary.md  currentTask.md  styleGuide.md  styleGuide_html.md
agents_docs/: codebaseSummary.md  currentTask.md  data_summarization_architecture_analysis.md  generic_prompt_enhancement_strategy.md  hitl_integration_plan.md  langgraph_architecture_diagram.mmd  langgraph_migration_plan.md  langgraph_node_analysis.md  plotting_tool_integration.md  projectRoadmap.md  techStack.md
bot/: __init__.py  bot.py
bot/formatters/: __init__.py
bot/handlers/: coach_handlers.py  command_handlers.py  conversation_handlers.py  data_handlers.py  error_handlers.py
bot/utils/: __init__.py  enhanced_progress_manager.py  message_formatter.py  progress_manager.py
cli/: README.md  coach_config_template.yaml  garmin_ai_coach_cli.py  rich_workflow.py  tele_garmin_cli.py
core/: __init__.py  config.py
core/security/: __init__.py  base.py  cache.py  competitions.py  credentials.py  execution.py  reports.py  users.py
core/storage/: __init__.py
design_docs/: bigger_picture_plan_enhancement.md  weekly_plan_improvements.md  weekly_planning_feature.md
examples/admin/: broadcast_update.py
examples/garmin/: test_extractor.py
examples/langgraph_hitl/: interactive_demo.py  simple_ask_human_example.py
notebooks/: vo2max.ipynb
notebooks/.ipynb_checkpoints/: vo2max-checkpoint.ipynb
scripts/: broadcast_update.py  cleanup_repo.py  list_users.py  read_user_profile.py  send_fun_message.py  setup_env.sh  start_dev.sh  start_prod.sh  test_extractor.py
services/ai/: __init__.py  ai_settings.py  client.py  enhanced_framework.py  model_config.py  prompts.py
services/ai/config/: agents.yaml  ai_settings.py
services/ai/flows/: __init__.py  analysis_flow.py  workout_flow.py
services/ai/flows/analysis/: analysis_flow.py
services/ai/flows/tools/: tools.py
services/ai/flows/weekly_plan/: __init__.py  weekly_plan_flow.py
services/ai/flows/workout/: workout_flow.py
services/ai/langchain/: __init__.py  analysis_chains.py  analysis_orchestrator.py  master_orchestrator.py  tool_usage_limiter.py  weekly_plan_chains.py  weekly_plan_orchestrator.py
services/ai/langchain/prompts/: README.md  __init__.py  prompt_templates.py  system_prompts.py  user_prompts.py
services/ai/langgraph/: __init__.py
services/ai/langgraph/config/: __init__.py  langsmith_config.py
services/ai/langgraph/nodes/: __init__.py  activity_data_node.py  activity_expert_node.py  activity_interpreter_node.py  activity_summarizer_node.py  data_integration_node.py  data_summarizer_node.py  expert_subgraph_factory.py  formatter_node.py  metrics_expert_node.py  metrics_node.py  metrics_summarizer_node.py  node_base.py  orchestrator_node.py  physiology_expert_node.py  physiology_node.py  physiology_summarizer_node.py  plan_formatter_node.py  plot_resolution_node.py  prompt_components.py  season_planner_node.py  synthesis_node.py  tool_calling_helper.py  weekly_planner_node.py
services/ai/tools/: __init__.py  visualization_tool.py
services/ai/utils/: __init__.py  cost_tracker.py  intermediate_storage.py  plan_storage.py  retry_handler.py
services/garmin/: __init__.py  cache_client.py  client.py  competition_models.py  daily_cache.py  data_extractor.py  models.py
services/outside/: client.py  models.py
services/report/: __init__.py  generator.py  utils.py
tests/: conftest.py  test_bot_handlers_characterization.py  test_cache_client.py  test_cli_e2e.py  test_cost_tracking_integration.py  test_daily_cache.py  test_data_extractor_characterization.py  test_data_summarization_nodes.py  test_expert_subgraph_factory.py  test_extract_text_content.py  test_garmin_client.py  test_hitl_feature.py  test_langgraph_core_migration.py  test_langgraph_foundation.py  test_langgraph_planning_workflow.py  test_langgraph_poc.py  test_outside_client.py  test_plotting_tool_integration.py  test_plotting_tool_migration.py  test_refactored_expert_nodes.py  test_running_metrics.py  test_security_characterization.py  test_workflow_ui_components.py
tests/bot/: conftest.py  test_bot.py  test_command_handlers.py  test_conversation_handlers.py  test_data_handlers.py  test_formatters.py
tests/services/ai/: __init__.py  test_client.py  test_prompts.py
tests/services/garmin/: __init__.py  test_activities.py  test_data_extractor.py  test_error_handling.py  test_metrics.py
tests/services/report/: __init__.py  test_generator.py  test_utils.py
utils/: __init__.py  auth.py  data_extractor.py  logging.py  meta.py  pace.py  prompts.py  report_utils.py
(+32 files in other folders)
